@@ -43,6 +43,8 @@ documents those changes that are of interest to users and admins.
  -- Added configure option --enable-load-env-no-login for use with Moab. If
     set then the user job runs with the environment built without a login
     ("su <user> env" rather than "su - <user> env").
+ -- Fix output of "srun -o %C" (allocated CPU count) for running jobs. This was
+    broken in 1.2.18 for handling requeue of Moab jobs.
 
 * Changes in SLURM 1.2.18
 =========================
